gccida/c1/force_operand
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:5904:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:5910:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:5913:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:5917:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:5918:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:5934:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = (  struct rtx_def *)value[1]; 
                         ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:5979:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v3->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:5991:13: error: expected ';' after expression
v12 = ( rtx)value[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:6015:21: error: use of undeclared identifier 'machine_mode'
v12 = negate_rtx( ( machine_mode)BYTE2( v5), *( rtx *)&value[1]); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:6015:54: error: expected expression
v12 = negate_rtx( ( machine_mode)BYTE2( v5), *( rtx *)&value[1]); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:6019:29: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
&& ( v13.rtwint = ( __int64)value->fld[0], *( _WORD *)v13.rtwint == 75) 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:6023:23: error: use of undeclared identifier 'machine_mode'
v15 = expand_binop( ( machine_mode)*( ( unsigned __int8 *)value + 2), v6, v14, v12, subtarget, 0, OPTAB_LIB_WIDEN); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:6025:30: error: expected expression
v17 = force_operand( *( rtx *)( value->fld[0].rtwint + 16), 0LL); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/expr.c:6037:28: error: use of undeclared identifier 'machine_mode'
subtarget = gen_reg_rtx( ( machine_mode)BYTE2( v5)); 
                           ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_operand/src/obj/expr.o] Error 1
